@@ -4,6 +4,7 @@
 - Making python-readability optional
 - Removing "next" and "previous" which are quite confusing and not obvious
 - Fixing a crash when accessing an empty html page
+- Not trying to display non-image files to avoid errors. (this requires "file")
 
 ## 1.3 - April 2th 2022
 - Removed dependency to python-magic. File is now used directly (and should be on every system).
